# zfs-http-query

./: Cargo.toml  Dockerfile  README.md
.github/: renovate.json5
.github/workflows/: build-and-test.yml  docker-publish.yaml  renovate.yaml
src/: main.rs  server.rs  unix_socket.rs
src/shims/: zpool.sh
